--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -57,13 +57,13 @@ glx-copy-from-front = false;
 # Enabled client-side shadows on windows.
 shadow = true;
 # The blur radius for shadows. (default 12)
-shadow-radius = 5;
+shadow-radius = 15;
 # The left offset for shadows. (default -15)
 shadow-offset-x = -5;
 # The top offset for shadows. (default -15)
 shadow-offset-y = -5;
 # The translucency for shadows. (default .75)
-shadow-opacity = 0.5;
+shadow-opacity = 0.6;
 
 # Set if you want different colour shadows
 # shadow-red = 0.0;
@@ -82,9 +82,10 @@ shadow-exclude = [
     "name = 'xfce4-notifyd'",
     "name *= 'VLC'",
     "name *= 'compton'",
-    "name *= 'picom'",
+    "name = 'picom'",
     "name *= 'Chromium'",
     "name *= 'Chrome'",
+    "name *= 'bar'",
     "class_g = 'Firefox' && argb",
     "class_g = 'Conky'",
     "class_g = 'Kupfer'",
@@ -225,3 +226,5 @@ wintypes:
 
 # Use X Sync fence to sync clients' draw calls. Needed on nvidia-drivers with GLX backend for some users.
 xrender-sync-fence = true;
+
+
