--- a/config/polybar/colors.ini
+++ b/config/polybar/colors.ini
@@ -1,4 +1,14 @@
 [color]
-bg = #1e1e1e
-fg = #ffffff
-dimmed-fg = #a7a7a7
+
+bg      = #1E1E1E
+bg-alt  = #0D0C12
+
+fg      = #D9E5D6
+fg-alt  = #A7A7A7
+
+accent-left  = #D9E5D6
+accent-mid   = #D9E5D6
+accent-right = #D9E5D6
+
+urgent  = #F2594D
+
