--- a/config/polybar/old/modules.ini
+++ b/config/polybar/old/modules.ini
@@ -14,46 +14,78 @@
 [module/battery]
 type = internal/battery
 
+; This is useful in case the battery never reports 100% charge
 full-at = 98
 
+; Use the following command to list batteries and adapters:
+; $ ls -1 /sys/class/power_supply/
 battery = BAT0
 adapter = ADP0
 
+; If an inotify event haven't been reported in this many
+; seconds, manually poll for new values.
+;
+; Needed as a fallback for systems that don't report events
+; on sysfs/procfs.
+;
+; Disable polling by setting the interval to 0.
+;
+; Default: 5
 poll-interval = 5
 
+; Available tags:
+;   <label-charging> (default)
+;   <bar-capacity>
+;   <ramp-capacity>
+;   <animation-charging>
 format-charging = <animation-charging> <label-charging>
 
+; Available tags:
+;   <label-discharging> (default)
+;   <bar-capacity>
+;   <ramp-capacity>
+;   <animation-discharging>
 format-discharging = <ramp-capacity> <label-discharging>
 
-format-full =  <label-full>
+; Available tags:
+;   <label-full> (default)
+;   <bar-capacity>
+;   <ramp-capacity>
+format-full =  <label-full>
 
+; Available tokens:
+;   %percentage% (default) - is set to 100 if full-at is reached
+;   %percentage_raw%
+;   %time%
+;   %consumption% (shows current charge rate in watts)
 label-charging = %percentage%%
 
+; Available tokens:
+;   %percentage% (default) - is set to 100 if full-at is reached
+;   %percentage_raw%
+;   %time%
+;   %consumption% (shows current discharge rate in watts)
 label-discharging = %percentage%%
 
+; Available tokens:
+;   %percentage% (default) - is set to 100 if full-at is reached
+;   %percentage_raw%
 label-full = %percentage%%
 
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-ramp-capacity-5 = 
-ramp-capacity-6 = 
-ramp-capacity-7 = 
-ramp-capacity-8 = 
-ramp-capacity-9 = 
+; Only applies if <ramp-capacity> is used
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-5 = 
-animation-charging-6 = 
-animation-charging-7 = 
-animation-charging-8 = 
-
+; Only applies if <animation-charging> is used
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+; Framerate in milliseconds
 animation-charging-framerate = 750
 
 ;#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#
@@ -68,86 +100,63 @@ click-left = rofi-bluetooth &
 [module/date]
 type = custom/script
 
-exec = get-time
-format-padding = 2
-
+exec = calendar
 interval = 1
-click-left = urxvt -name 'calendar' -e "calcurse" & 
+click-left = popup-calendar2.sh --popup & 
 
 ;#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#
 
-[module/bspwm]
-type = internal/bspwm
+[module/ewmh]
+type = internal/xworkspaces
 
 ; Only show workspaces defined on the same output as the bar
-; NOTE: The bspwm and XRandR monitor names must match, which they do by default.
-; But if you rename your bspwm monitors with bspc -n this option will no longer
-; behave correctly.
-; Default: true
+;
+; Useful if you want to show monitor specific workspaces
+; on different bars
+;
+; Default: false
 pin-workspaces = true
 
-; Output mode flags after focused state label
-; Default: false
-inline-mode = false
-
-; Create click handler used to focus workspace
+; Create click handler used to focus desktop
 ; Default: true
 enable-click = true
 
-; Create scroll handlers used to cycle workspaces
+; Create scroll handlers used to cycle desktops
 ; Default: true
 enable-scroll = true
 
-; Set the scroll cycle direction 
-; Default: true
-reverse-scroll = true
+; icon-[0-9]+ = <desktop-name>;<icon>
+; NOTE: The desktop name needs to match the name configured by the WM
+; You can get a list of the defined desktops using:
+; $ xprop -root _NET_DESKTOP_NAMES
+; Note: Neither <desktop-name> nor <icon> can contain a semicolon (;)
+icon-0 = term;
+icon-1 = www;
+icon-2 = dev;
+icon-3 = chat;切
+icon-4 = edit;
+icon-5 = graph;
+icon-6 = settings;煉
+icon-7 = misc;
 
-; Use fuzzy (partial) matching on labels when assigning 
-; icons to workspaces
-; Example: code;♚ will apply the icon to all workspaces 
-; containing 'code' in the label
-; Default: false
-fuzzy-match = true
-
-; ws-icon-[0-9]+ = <label>;<icon>
-; Note that the <label> needs to correspond with the bspwm workspace name
-; Neither <label> nor <icon> can contain a semicolon (;)
-ws-icon-0 = TTY;
-ws-icon-1 = WEB;爵
-ws-icon-2 = CHAT;
-ws-icon-3 = DEV;
-ws-icon-4 = MED;
-ws-icon-5 = PROP;漣
-ws-icon-default = 
+icon-default = 
 
 ; Available tags:
 ;   <label-monitor>
-;   <label-state> - gets replaced with <label-(focused|urgent|occupied|empty)>
-;   <label-mode> - gets replaced with <label-(monocle|tiled|fullscreen|floating|locked|sticky|private)>
+;   <label-state> - gets replaced with <label-(active|urgent|occupied|empty)>
 ; Default: <label-state>
-format = <label-state>
-
-; If any values for label-dimmed-N are defined, the workspace/mode
-; colors will get overridden with those values if the monitor is out of focus
-; To only override workspaces in a specific state, use:
-;   label-dimmed-focused
-;   label-dimmed-occupied
-;   label-dimmed-urgent
-;   label-dimmed-empty
-label-dimmed-foreground         = ${color.fg-alt}
-label-dimmed-underline          = ${color.bg}
-label-dimmed-focused-background = ${color.bg-alt}
-label-dimmed-padding = 2
+format = <label-state> 
 
 ; Available tokens:
 ;   %name%
 ;   %icon%
 ;   %index%
 ; Default: %icon%  %name%
-label-focused = %icon%
-label-focused-foreground = ${color.bg}
-label-focused-background = ${color.accent-left}
-label-focused-padding = 2
+label-active = %icon% 
+label-active-foreground = #ffffff
+label-active-background = #3f3f3f
+label-active-underline = #fba922
+label-active-padding = 2
 
 ; Available tokens:
 ;   %name%
@@ -155,7 +164,7 @@ label-focused-padding = 2
 ;   %index%
 ; Default: %icon%  %name%
 label-occupied = %icon%
-label-occupied-foreground = ${color.accent-left}
+label-occupied-underline = #555555
 label-occupied-padding = 2
 
 ; Available tokens:
@@ -164,7 +173,9 @@ label-occupied-padding = 2
 ;   %index%
 ; Default: %icon%  %name%
 label-urgent = %icon%
-label-urgent-foreground = ${color.urgent}
+label-urgent-foreground = #000000
+label-urgent-background = #bd2c40
+label-urgent-underline = #9b0a20
 label-urgent-padding = 2
 
 ; Available tokens:
@@ -173,11 +184,8 @@ label-urgent-padding = 2
 ;   %index%
 ; Default: %icon%  %name%
 label-empty = %icon%
-label-empty-foreground = ${color.fg-alt}
+label-empty-foreground = #55
 label-empty-padding = 2
-
-; Separator in between workspaces
-label-separator = 
 
 ;#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#
 
@@ -197,7 +205,7 @@ fixed-values = true
 
 ; Spacing between entries
 ; Default: 2
-spacing = 2
+spacing = 4
 
 ; Available tags:
 ;   <label-mounted> (default)
@@ -220,23 +228,13 @@ format-unmounted = <label-unmounted>
 ;   %free%
 ;   %used%
 ; Default: %mountpoint% %percentage_free%%
-label-mounted = %mountpoint%: %used% (%percentage_used%%)
+label-mounted =  %mountpoint%: %used% of %total%
 
 ; Available tokens:
 ;   %mountpoint%
 ; Default: %mountpoint% is not mounted
 label-unmounted = %mountpoint%: not mounted
-label-unmounted-foreground = ${color.fg-alt}
-
-;#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#
-
-[module/info-label]
-type = custom/text
-
-content = info
-content-foreground = ${color.bg}
-content-background = ${color.accent-mid}
-content-padding = 2
+label-unmounted-foreground = ${color.dimmed-fg}
 
 ;#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#
 
@@ -250,7 +248,7 @@ port = 6600
 
 ; Seconds to sleep between progressbar/song timer sync
 ; Default: 1
-interval = 1
+interval = 2
 
 ; Available tags:
 ;   <label-song> (default)
@@ -270,16 +268,15 @@ interval = 1
 ;   <icon-next>
 ;   <icon-seekb>
 ;   <icon-seekf>
-format-online  = <label-time> <icon-prev> <toggle> <icon-next>
+format-online = <icon-prev> <toggle> <icon-next> <icon-repeat> <icon-random> <label-time>  <label-song>
+;format-playing = ${self.format-online}
+;format-paused = ${self.format-online}
+;format-stopped = ${self.format-online}
 
 ; Available tags:
 ;   <label-offline>
 ; Default: ""
 format-offline = <label-offline>
-
-label-time-background = ${color.accent}
-label-time-foreground = ${color.bg}
-label-time-padding = 2
 
 ; Available tokens:
 ;   %artist%
@@ -292,28 +289,29 @@ label-song = %artist% - %title%
 
 ; This will trim your song label to the specified
 ; characters 
-label-song-maxlen = 22
+label-song-maxlen = 40
 
 ; Available tokens:
 ;   None
-label-offline = mpd is offline
+label-offline =  mpd is offline
 
 ; Only applies if <icon-X> is used
-icon-play = 
-icon-play-padding = 0
-icon-play-foreground = ${color.accent}
+icon-play = 
+icon-pause = 
+icon-stop = 
+icon-prev = 
+icon-next = 
+icon-seekb = 
+icon-seekf = 
+icon-random = 
+icon-repeat = 
+icon-single = 1
+icon-consume = ✀
 
-icon-pause = 
-icon-pause-padding = 0
-icon-pause-foreground = ${color.accent}
-
-icon-prev = 
-icon-prev-padding = 2
-icon-prev-foreground = ${color.accent}
-
-icon-next = 
-icon-next-padding = 2
-icon-next-foreground = ${color.accent}
+; Used to display the state of random/repeat/repeatone/single
+; Only applies if <icon-[random|repeat|repeatone|single]> is used
+toggle-on-foreground = ${color.fg}
+toggle-off-foreground = ${color.dimmed-fg}
 
 ;#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#
 
@@ -343,7 +341,7 @@ unknown-as-up = true
 ; Available tags:
 ;   <label-connected> (default)
 ;   <ramp-signal>
-format-connected = <ramp-signal> <label-connected>
+format-connected =  <label-connected>
 
 ; Available tags:
 ;   <label-disconnected> (default)
@@ -365,31 +363,27 @@ format-packetloss = <animation-packetloss> <label-connected>
 ;   %downspeed% [wireless+wired]
 ;   %linkspeed% [wired]
 ; Default: %ifname% %local_ip%
-label-connected = %upspeed%
-
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
-
-animation-packetloss-0 = 
-animation-packetloss-1 = 
+label-connected = %essid% %downspeed:8%
+label-connected-foreground = ${color.fg}
 
 ; Default: (none)
-label-disconnected = 
-label-disconnected-foreground = ${color.fg-alt}
+label-disconnected = disconnected
+label-disconnected-foreground = ${color.dimmed-fg}
+
+; Only applies if <animation-packetloss> is used
+animation-packetloss-0 = 
+animation-packetloss-0-foreground = ${color.fg}
+animation-packetloss-1 = 
+animation-packetloss-1-foreground = ${color.dimmed-fg}
+; Framerate in milliseconds
+animation-packetloss-framerate = 500
 
 ;#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#
 
 [module/powermenu]
 type = custom/text
 
-content = 
-content-foreground = ${color.bg}
-content-background = ${color.accent-right}
-content-padding = 2
-
+content = 
 click-left = rofi-powermenu &
 
 ;#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#
@@ -429,18 +423,13 @@ label-volume = %percentage%%
 ; Available tokens:
 ;   %percentage% (default)
 ;   %decibels% (unreleased)
-label-muted = 
-label-muted-foreground = ${color.fg-alt}
+label-muted =  muted
+label-muted-foreground = ${color.dimmed-fg}
 
 ; Only applies if <ramp-volume> is used
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-3 = 
-ramp-volume-4 = 
-
-ramp-headphones-0 = 
-ramp-headphones-1 = 
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
 
 ;#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#
 
@@ -450,48 +439,6 @@ type = custom/text
 content = |
 content-foreground = ${color.dimmed-fg}
 content-padding = 2
-
-;#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#
-
-[module/temperature]
-type = internal/temperature
-
-interval = 0.5
-
-thermal-zone = 0
-
-; Full path of temperature sysfs path
-; Use `sensors` to find preferred temperature source, then run
-; $ for i in /sys/class/hwmon/hwmon*/temp*_input; do echo "$(<$(dirname $i)/name): $(cat ${i%_*}_label 2>/dev/null || echo $(basename ${i%_*})) $(readlink -f $i)"; done
-; to find path to desired file
-; Default reverts to thermal zone setting
-hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon5/temp1_input
-
-base-temperature = 20
-warn-temperature = 60
-
-; Whether or not to show units next to the temperature tokens (°C, °F)
-; Default: true
-units = true
-
-; Available tags:
-;   <label> (default)
-;   <ramp>
-format =  <label>
-
-; Available tags:
-;   <label-warn> (default)
-;   <ramp>
-format-warn =  <label-warn>
-
-; Available tokens:
-;   %temperature% (deprecated)
-;   %temperature-c%   (default, temperature in °C)
-;   %temperature-f%   (temperature in °F)
-label = %temperature-c%
-
-label-warn = %temperature-c%
-label-warn-foreground = ${color.urgent}
 
 ;#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#
 
@@ -531,20 +478,13 @@ enable-scroll = true
 ;   <bar>
 format = <ramp> <label>
 
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 =  
-ramp-4 = 
-ramp-5 = 
-ramp-6 = 
-ramp-7 = 
-ramp-8 = 
-ramp-9 = 
-
 ; Available tokens:
 ;   %percentage% (default)
 label = %percentage%%
+
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
 
 ;#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#
 
@@ -557,7 +497,7 @@ blacklist-1 = scroll lock
 ; Available tags:
 ;   <label-layout> (default)
 ;   <label-indicator> (default)
-format =  <label-layout>
+format =  <label-layout> <label-indicator>
 format-spacing = 0
 
 ; Available tokens:
@@ -585,15 +525,16 @@ label-indicator-off = -%name%
 ; Available tokens:
 ;   %name%
 ;   %icon%
-label-indicator-on-capslock  =  CL
+label-indicator-on-capslock =  CL
 label-indicator-off-capslock =  CL
 
 ;#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#_#
 
-[module/updates]
+[module/updates-arch]
 type = custom/script
 
-exec = check-updates
-interval = 60
+exec = check-arch-updates
+interval = 600
+click-left = urxvt -e sudo pacman -Syu ; urxvt -e yay -Syu
 
 ;###############################################################################
