[UPD] Made polybar transparent

--- a/config/polybar/colors.ini
+++ b/config/polybar/colors.ini
@@ -1,14 +1,14 @@
 [color]
 
-bg      = #1E1E1E
-bg-alt  = #0D0C12
+bg      = #AA101010
+bg-alt  = #AA101010
 
-fg      = #D9E5D6
-fg-alt  = #A7A7A7
+fg      = #FFD9E5D6
+fg-alt  = #FF787878
 
-accent-left  = #D9E5D6
-accent-mid   = #D9E5D6
-accent-right = #D9E5D6
+accent-left  = #FFCCE8DC
+accent-mid   = #FFCCE8DC
+accent-right = #FFCCE8DC
 
-urgent  = #F2594D
+urgent  = #FFF2594D
 
