--- a/config/polybar/modules.ini
+++ b/config/polybar/modules.ini
@@ -135,8 +135,6 @@ format = <label-state>
 ;   label-dimmed-urgent
 ;   label-dimmed-empty
 label-dimmed-foreground         = ${color.fg-alt}
-label-dimmed-underline          = ${color.bg}
-label-dimmed-focused-background = ${color.bg-alt}
 label-dimmed-padding = 2
 
 ; Available tokens:
@@ -156,6 +154,7 @@ label-focused-padding = 2
 ; Default: %icon%  %name%
 label-occupied = %icon%
 label-occupied-foreground = ${color.accent-left}
+label-occupied-background = ${color.bg-alt}
 label-occupied-padding = 2
 
 ; Available tokens:
@@ -165,6 +164,7 @@ label-occupied-padding = 2
 ; Default: %icon%  %name%
 label-urgent = %icon%
 label-urgent-foreground = ${color.urgent}
+label-urgent-background = ${color.bg-alt}
 label-urgent-padding = 2
 
 ; Available tokens:
